3Ano/LFA/Bloco2_Introdução_ANTLR/bloco2/b2_10/Questions.g4
grammar Questions;

program :
    question* EOF
;

question:
    ID '(' STRING ')' '{' answer+ '}'
;

answer:
    STRING ':' Integer ';'
;

ID      : [a-bA-Z];
Integer : [0-9]+;
STRING  : '"' ~["\r\n]* '"' ;
COMMENT : '#' ~[\n]* -> skip ;
NEWLINE : '\r'? '\n' -> skip ;
WS      : [ \t]+ -> skip ;
